[package]
name = "finchers-tungstenite"
version = "0.1.0-dev"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false

[dependencies]
base64 = "0.9.3"
failure = "0.1.2"
finchers = "0.12.0-alpha.7"
futures = "0.1.24"
http = "0.1.13"
hyper = "0.12.10"
sha1 = "0.6.0"
tokio = "0.1.8"
tokio-tungstenite = "0.6.0"
tungstenite = "0.6.0"

[patch.crates-io]
finchers = { git = "https://github.com/finchers-rs/finchers.git", tag = "v0.12.0-alpha.7" }
