[package]
name = "finchers-tungstenite"
version = "0.1.0-dev"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false

[dependencies]
finchers = "0.12"

base64 = "0.9.3"
failure = "0.1.2"
futures = "0.1.24"
http = "0.1.13"
hyper = "0.12.10"
sha1 = "0.6.0"
tokio-executor = "0.1.4"
tokio-tungstenite = "0.6.0"
tungstenite = "0.6.0"

[dev-dependencies]
pretty_env_logger = "0.2.4"
log = "0.4.5"

[patch.crates-io.finchers]
git = "https://github.com/finchers-rs/finchers.git"
tag = "v0.12.0"
